...
              .foregroundColor(.red)
              .fontWeight(.bold)
              .padding()
              .transition(.opacity.animation(.spring()))
              .accessibilityIdentifier("NoMealPlanErrorText")
          } else {
            Text("No meal plan available. Please create one.")
              .transition(.opacity.animation(.spring()))
              .accessibilityIdentifier("NoMealPlanText")
          }
        }
      }
      .navigationTitle("Meal Planner")
...

  var actionSection: some View {
    Section {
      Button("Create Meal Plan") {
        viewModel.fetchMealPlan()
      }
      .accessibilityIdentifier("CreateMealPlanButton")
    }
  }
}

struct MultipleSelectionSection<Options: Hashable & Codable & CaseIterable>: View
  where Options: RawRepresentable, Options.RawValue == String {
...
